added color selection

--- a/app/src/main/res/drawable/pellet_normal.xml
+++ b/app/src/main/res/drawable/pellet_normal.xml
@@ -5,7 +5,7 @@
             <stroke
                 android:width="2dp"
                 android:color="#FF999999" />
-            <solid android:color="#000000" />
+            <solid android:color="#00000000" />
         </shape>
     </item>
     <item>
@@ -13,7 +13,7 @@
             <stroke
                 android:width="2dp"
                 android:color="#FF999999" />
-            <solid android:color="#000000" />
+            <solid android:color="#00000000" />
             <corners android:radius="10dp" />
         </shape>
     </item>
