--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
             android:layout_margin="2dp"
             android:background="@color/skin"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
             android:tag="@color/skin" />
 
@@ -58,6 +59,7 @@
             android:layout_margin="2dp"
             android:background="@color/green"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
             android:tag="@color/green" />
 
@@ -67,8 +69,9 @@
             android:layout_margin="2dp"
             android:background="@color/red"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
-            android:tag="@color/skin" />
+            android:tag="@color/red" />
 
         <ImageButton
             android:layout_width="25dp"
@@ -76,6 +79,7 @@
             android:layout_margin="2dp"
             android:background="@color/blue"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
             android:tag="@color/blue" />
 
@@ -94,6 +98,7 @@
             android:layout_margin="2dp"
             android:background="@color/lollipop"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
             android:tag="@color/lollipop" />
 
@@ -112,9 +117,18 @@
             android:layout_margin="2dp"
             android:background="@color/yellow"
             android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
             android:src="@drawable/pellet_normal"
             android:tag="@color/yellow" />
-
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:background="@color/DarkOliveGreen"
+            android:contentDescription="@string/bcolorPellet"
+            android:onClick="paintClicked"
+            android:src="@drawable/pellet_normal"
+            android:tag="@color/DarkOliveGreen" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
