--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -167,7 +167,14 @@
             android:scaleType="fitXY"
             android:src="@drawable/ic_brush" />
 
-
+        <ImageButton
+            android:id="@+id/ib_undo"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:contentDescription="undo_button"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_undo" />
     </LinearLayout>
 
 
